--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     compile 'org.apache.commons:commons-csv:1.4'
     compile 'org.slf4j:slf4j-api:1.7.25'
     compile 'org.slf4j:slf4j-nop:1.7.25'
+    compile 'net.argius:minestra:1.0.0'
     testCompile 'ch.qos.logback:logback-core:1.2.3'
     testCompile 'ch.qos.logback:logback-classic:1.2.3'
     testCompile 'junit:junit:4.12'
